java version upgraded gradle version upgraded spring boot version upgraded spring doc added gradle versions externalized to props fixed deprecated API usage