@@ -1,39 +1,37 @@
 package com.kb.fm.util;
 
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
-
 import com.kb.fm.exceptions.DateFormatException;
-import org.springframework.util.CollectionUtils;
-
+import com.kb.fm.exceptions.FinanceManagerException;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.util.CollectionUtils;
+
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.List;
 
 @UtilityClass
 @Slf4j
 public class DateUtil {
-	private static String dateFormat = "yyyy-MM-dd'T'HH:mm:ss.SSS";
-	private static List<String> defaultExcelInputForamts = Arrays.asList("dd-MM-yyyy", "dd/MM/yyyy", "yyyyMMdd");
+	private static final String DATE_FORMAT = "yyyy-MM-dd'T'HH:mm:ss.SSS";
+	private static final List<String> DEFAULT_EXCEL_INPUT_FORAMTS = List.of("dd-MM-yyyy", "dd/MM/yyyy", "yyyyMMdd");
 
 	public static Date convert(String input) {
-		SimpleDateFormat sdf = new SimpleDateFormat(dateFormat);
+		SimpleDateFormat sdf = new SimpleDateFormat(DATE_FORMAT);
 		try {
 			return sdf.parse(input);
 		} catch (ParseException e) {
-			e.printStackTrace();
-			throw new RuntimeException("Invalid date " + input);
+			throw new FinanceManagerException("Could not parse date " + input+" with format: "+DATE_FORMAT);
 		}
 	}
 
 	public static String convertDateToDatePickerFormat(Date date) {
-		return new SimpleDateFormat(dateFormat).format(date);
+		return new SimpleDateFormat(DATE_FORMAT).format(date);
 	}
 
 	public static Date convertToDate(String input) {
-		return convertToDate(input, defaultExcelInputForamts);
+		return convertToDate(input, DEFAULT_EXCEL_INPUT_FORAMTS);
 	}
 	
 	public static Date convertToDate(String input, String format) throws DateFormatException {
@@ -46,7 +44,7 @@ public class DateUtil {
 
 	public static Date convertToDate(String input, List<String> acceptedFormats) {
 		if (CollectionUtils.isEmpty(acceptedFormats)) {
-			throw new RuntimeException("At least one date format is required");
+			throw new FinanceManagerException("At least one date format is required");
 		}
 		for (String format : acceptedFormats) {
 			try {
@@ -55,7 +53,8 @@ public class DateUtil {
 				log.warn("parsing of date {} with format {} failed", input, format);
 			}
 		}
-		throw new RuntimeException("Unable to parse the date " + input + " with the given formats");
+		log.error("Date: {} parsing failed with the registered formats: {}", input, acceptedFormats);
+		throw new FinanceManagerException("Unable to parse the date " + input + " with the given formats");
 	}
 
 }
